# notion-tasks-cli

./: .gitignore  AGENTS.md  CONTRIBUTING.md  IA.md  QUALIDADE.md  README.md  pyproject.toml  start_app.py
.github/workflows/: ci.yml
cli/: __init__.py  __main__.py  notion_tasks.py
core/: config.py  workspaces.py
integrations/: github.py  notion.py  openrouter.py
services/: clonagem.py  conteudo.py  estrutura_projeto.py  exploracao.py  ia.py  ingestao.py  inventario_github.py  normalizacao.py  projetos.py  propriedades.py  reordenacao.py  schema.py  sincronizar_github.py  tarefas.py
tests/: conftest.py  test_cli_notion_tasks.py  test_cli_status_validation.py  test_integration_status_validation.py  test_integrations_github.py  test_prevencao_json_surrogate.py  test_services_conteudo.py  test_services_inventario_github.py  test_services_propriedades.py  test_workspaces.py
